tests/broken/unclosed-if.stderr
error: This statement is never closed.
 --> tests/broken/unclosed-if.rs:4:26
  |
4 | #[oxiplate_inline = "{%- if should_do -%}{{ action }}"]
  |                          ^^
